feat: developed scraper module

--- a/.env
+++ b/.env
@@ -9,6 +9,6 @@ SERVER_HOST=${LOCALHOST}:${SERVER_PORT}
 DATABASE_URL=postgres://user:password@localhost:5432/db
 
 # Scrape URL
-START_PAGE=1
-SOURCE_URL=https://catalog.data.gov/dataset/
+SOURCE_DOMAIN=https://catalog.data.gov
+SOURCE_URL=${SOURCE_DOMAIN}/dataset
 # to scrape page 1 url is: https://catalog.data.gov/dataset/?page=1
