feat: db module developed

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ SERVER_PORT=8000
 SERVER_HOST=${LOCALHOST}:${SERVER_PORT}
 
 # Datbase env vars
-DATABASE_URL=postgres://user:password@localhost:5432/db
+DATABASE_URL=postgresql://user:password@localhost:5432/db
 
 # Scrape URL
 SOURCE_DOMAIN=https://catalog.data.gov
